--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Hello Coursera. it's a geat course!</title>
 </head>
 <body>
 <H1>Hello Coursera!</H1>
