--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera. it's a geat course!</title>
+	<title>Hello Coursera. </title>
 </head>
 <body>
-<H1>Hello Coursera!</H1>
+<H1>Hello Coursera! it's a geat course!</H1>
 </body>
 </html>
